hphp/hack/test/typecheck/enum_2.php.exp
File "enum_2.php", line 7, characters 7-9:
Enums must be int or string or arraykey, not mixed (Typing[4024])
